small spacing adjustments and active tab fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -89,31 +89,31 @@ main {
     }
 
     .accordian__box {
-      border: 1px solid $accentTertiary;
+      border-top: none;
       margin: 0px 30px;
       display: grid;
       grid-template-columns: repeat(4, 1fr);
         .accordian__tab__selection {
-          height: 40px;
           display: flex;
           align-items: center;
           justify-content: center;
           background-color: $accentSecondary;
           width: 100%;
           height: 100%;
-          padding: 5px 0px;
-          border-right: 1px solid white;
+          padding: 10px 0px;
+          border-right: 1px solid $accentSecondary;
           border-bottom: 1px solid $accentTertiary;
           box-sizing: border-box;
           cursor: pointer;
           position: relative;
-          &:nth-last-of-type(1) {
-            border-right: none;
+          &:nth-of-type(odd) {
+            border-right: 1px solid white;
+            border-left: 1px solid white;
           }
           
           &.active {
             background: white;
-            border-right: 1px solid $accentTertiary;
+            border: 1px solid $accentTertiary;
             border-bottom: 1px solid white;
           }
 
@@ -123,21 +123,31 @@ main {
             background-size: contain;
             position: absolute;
             right: 5px;
+            top: 13px;
           }
         }
         .accordian__box__content {
           grid-column: span 4;
-          display: block;
+          display: grid;
           overflow: hidden;
           transition: 1s;
           height: initial;
+          border-left: 1px solid $accentTertiary;
+          border-right: 1px solid $accentTertiary;
+          border-bottom: 1px solid $accentTertiary;
+          
           &.hidden {
             min-height: 0px;
+            border: none;
             height: 0px;
             padding: 0px 20px;
+            overflow: hidden;
             .accordian__box__content__placeholderimage {
               min-height: 0px;
-            }            
+            }
+            .accordian__box__content__words {
+              max-height: 0px;
+            }
           }
         }
       }
@@ -153,11 +163,14 @@ main {
           transition: 1s;
           background-size: 100% 100%;
           min-height: 400px;
+          height: 100%;
         }
         .accordian__box__content__words {
           display: flex;
           flex-wrap: wrap;
           align-items: flex-start;
+          transition: 3s;
+          max-height: 800px;
           h3 {
             display: flex;
             align-items: center;
@@ -167,6 +180,11 @@ main {
             height: 40px;
             font-weight: 600;
             margin-bottom: 10px;
+          }
+          p {
+            &:nth-of-type(1) {
+              margin-bottom: 15px;
+            }
           }
         }
       }
@@ -213,7 +231,7 @@ main {
           }
 
           &.selected {
-            box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4)
+            box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4)
           }
           &.accordian__html {
             background: $html;
@@ -308,7 +326,6 @@ main {
           border-bottom: 1px solid $accentTertiary;
           &.active {
             background: white;
-            border-right: none;
             border-bottom: 1px solid white;
           }
         }
